2010-06-20  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-multipart-encrypted.c (g_mime_multipart_encrypted_decrypt):
	Don't unref the encrypted content mime part object when the
	content-type doesn't match application/octet-stream,
	g_mime_multipart_get_part() does not ref parts it returns. We also
	need to set an error when this happens.

2010-05-18  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.ac: Bumped version to 2.5.3

	* gmime/gmime-encodings.h (GMIME_QP_ENCODE_LEN): Since
	force-wrapped lines use "=\n" instead of just "\n", lines will be
	74 bytes, not 73.

2010-05-15  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.ac: Bumped version to 2.5.2

2010-05-14  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-encodings.h (GMIME_QP_ENCODE_LEN): Fixed to take
	into acount the possibility of having to force-wrap lines at 72+
	characters.

2010-05-06  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-data-wrapper.c (g_mime_data_wrapper_get_stream):
	Fixed documentation.

2010-04-13  Jeffrey Stedfast  <fejj@novell.com>

	* configure.ac: Added a --disable-cryptography flag to alloow
	building without GnuPG or S/MIME support. Thanks to
	pier11@operamail.com for this patch. Fixes bug #615343.

	* tests/test-streams.c: Use glib's G_GINT64_FORMAT and
	G_GSIZE_FORMAT macros for our various *printf needs to be more
	portable. Thanks to pier11@operamail.com for this patch.

	* gmime/gmime-gpg-context.c: Use g_set_error_literal() when no
	printf-style arguments are needed. Fixes bug #615594. Thanks to
	Tobias Mueller and Christian Persch.

	* Applied patch by pier11@operamail.com to fix the build for
	MingW. Fixes bug #615068.

2010-03-26  Jeffrey Stedfast  <fejj@novell.com>

	Fixes for bug #613653

	* gmime/gmime.c (g_mime_init): Initialize GMimeObject's type
	registry.
	(g_mime_shutdown): Shut it down here.

	* gmime/gmime-object.c (g_mime_object_type_registry_init): Renamed